assets/css/style.css
body {
    font-family: 'Google Sans Flex', Arial, Helvetica, sans-serif;
    font-optical-sizing: auto;
    font-style: normal;
    font-variation-settings:
        'slnt' 0,
        'wdth' 100,
        'GRAD' 0,
        'ROND' 0;
}

/* 
* {
    outline: 1px solid rgb(255, 0, 0, 0.1);
}
 */

.banner-width {
    width: 100%;
}

/* Make width 100% on medium screens and up */
@media (min-width: 768px) {
    .banner-width {
        width: 85%;
    }
}

